--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trade Autopsy | RIP My Trade</title>
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ripmytrade.com/" />
+    <meta property="og:title" content="Trade Autopsy | RIP My Trade" />
+    <meta property="og:description" content="Find out what really killed your trade. Confess your trading sins and learn from others." />
+    <meta property="og:image" content="/og-image.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ripmytrade.com/" />
+    <meta property="twitter:title" content="Trade Autopsy | RIP My Trade" />
+    <meta property="twitter:description" content="Find out what really killed your trade. Confess your trading sins and learn from others." />
+    <meta property="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
